Closed Bug 1001587 Opened 12 years ago Closed 12 years ago

nsGenericDOMDataNode's Traverse method doesn't need to call BindingManager()->Traverse()

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: mccr8, Assigned: mccr8)

Details

Attachments

(1 file)

Currently, it does. But the first thing that nsBindingManager::Traverse does is: 1014 if (!aContent->HasFlag(NODE_MAY_BE_IN_BINDING_MNGR) || 1015 !aContent->IsElement()) { and return without doing anything if it is true. bz said nsGenericDOMDataNode isn't an element, so I think this call will never do anything. It is a little confusing having it in there, in my opinion, so I think it should be removed. Let me know if I am misunderstanding something.
I think this is a consequence of bug 796061, which moved a few things out of the binding manager into the node itself.
The stuff from nsBindingManager::Traverse that is used for data nodes was removed in bug 796061, so it now just returns immediately for non-elements, so we don't need to call it any more in data nodes. try run: https://tbpl.mozilla.org/?tree=Try&rev=00aafe8bcef0
Attachment #8413455 - Flags: review?(bugs)
Attachment #8413455 - Flags: review?(bugs) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: