Bug 1001587 - nsGenericDOMDataNode's Traverse method doesn't need to call nsBindingManager::Traverse. r=smaug

The stuff from nsBindingManager::Traverse that is used for data nodes
was removed in bug 796061, so it now just returns immediately for
non-elements, so we don't need to call it any more in data nodes.